# Muse

./: .gitignore  Cargo.toml  readme.md
src/: canvas_app.rs  canvas_image.rs  communication.rs  lib.rs  main.rs  mod.rs  p2p.rs
src/canvas_state_sync/: mod.rs  p2p.rs  sync_types.rs
src/custom_widgets/: canvas_image.rs  mod.rs  toggle.rs
