[package]
name = "muse"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
eframe = { version = "0.29", features = ["default"] }
egui_extras = { version = "0.29", features = ["default", "all_loaders"] }
env_logger = "0.11.5"
image = { version = "0.25.2", features = ["default-formats"] }
itertools = "0.13.0"
resvg = "0.44.0"
